--- a/css/main.css
+++ b/css/main.css
@@ -3,4 +3,71 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: sans-serif;
 }
+
+/* CONTAINER */
+.container {
+    width: 70%;
+    margin: 20px auto;
+    background: blue;
+}
+
+/* PRODUCT */
+li.product {
+    display: inline-block;
+    width: 32%;
+    margin: 20px .55%;
+    background: red;
+    list-style: none;
+}
+
+/* PRODUCT IMAGE */
+.product-image {
+    position: relative;
+}
+
+.product-image img {
+    width: 100%;
+}
+
+.product-image .hover-state {
+    display: none;
+}
+
+.product-image > span {
+    position: absolute;
+}
+
+.product-image .heart {
+    top: 20px;
+    right: 0;
+    padding: 8px 15px;
+    background-color: #fff;
+    font-size: 30px;
+}
+
+.product-image .product-details {
+    bottom: 20px;
+    left: 0;
+}
+
+.product-image .product-details > span {
+    padding: 6px;
+    margin-right: 3px;
+    font-weight: 700;
+    font-size: 14px;
+    color: #fff;
+    background: #000;
+}
+
+.product-image .product-details .bg-type-1 {
+    background-color: #eb0037;
+}
+
+.product-image .product-details .bg-type-2 {
+    background-color: #00875a;
+}
+
+/* PRODUCT IMAGE: HOVER EFFECT */
+
